virt01/manual/iot/grafana/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
      annotations:
        backup.velero.io/backup-volumes: grafana-pv
    spec:
      serviceAccountName: grafana-sa
      securityContext:
        fsGroup: 472
      containers:
        - name: grafana
          image: harbor.nf.lab/proxy.docker.io/grafana/grafana-oss:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: grafana-port
              protocol: TCP
          resources: {}
          readinessProbe:
            tcpSocket:
              port: grafana-port
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            tcpSocket:
              port: grafana-port
            initialDelaySeconds: 30
            failureThreshold: 3
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 1
          volumeMounts:
            - name: grafana-pv
              mountPath: /var/lib/grafana
      volumes:
        - name: grafana-pv
          persistentVolumeClaim:
            claimName: grafana-pvc
