virt01/manual/iot/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc
  labels:
    app: grafana
spec:
  ports:
    - port: 3000
      protocol: TCP
      name: grafana-svc-port
  selector:
    app: grafana
